# ines-tools

./: README.md  pyproject.toml
ines_tools/: ines_aggregate.py  ines_transform.py
ines_tools/tool_specific/mathprog/: read_mathprog_model_data.py  read_mathprog_model_structure.py  settings_OSeMOSYS.yaml  write_mathprog_model_data.py
